<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/dark_blue_color"
    android:orientation="vertical"
    android:paddingHorizontal="24dp"
    android:paddingVertical="16dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:paddingVertical="8dp"
        android:text="@string/hello"
        android:textColor="@color/white"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/nav_name_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:paddingVertical="4dp"
        android:text="@string/name"
        android:textColor="@color/white"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/nav_email_TV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway"
        android:paddingVertical="8dp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="20sp" />
</LinearLayout>