<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue_color"
    tools:context=".SplashScreenActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:src="@drawable/img_topper_1"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="48dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="32dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/notes"
            android:textColor="@color/white"
            android:textSize="48sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/raleway"
            android:text="@string/note_quote"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="32dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/btn_solid"
            android:fontFamily="@font/raleway"
            android:minHeight="50dp"
            android:paddingHorizontal="100dp"
            android:text="@string/log_in"
            android:textAllCaps="false"
            android:textColor="@color/dark_blue_color"
            android:hapticFeedbackEnabled="true"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:layout_marginVertical="16dp"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:background="@color/white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:fontFamily="@font/raleway_bold"
                android:gravity="center"
                android:text="@string/or"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_gravity="center"
                android:layout_weight="10"
                android:background="@color/white" />

        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/signUpBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="32dp"
            android:background="@drawable/btn_outline"
            android:fontFamily="@font/raleway"
            android:minHeight="50dp"
            android:paddingHorizontal="100dp"
            android:hapticFeedbackEnabled="true"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>