<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".YourProfileFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="32dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_bold"
                android:paddingVertical="48dp"
                android:text="@string/your_profile"
                android:textColor="@color/dark_blue_color"
                android:textSize="42sp"
                android:textStyle="bold" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameETLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:hint="@string/name"
                android:minHeight="48dp"
                app:boxStrokeColor="@color/dark_blue_color"
                app:boxStrokeErrorColor="@color/error_color"
                app:endIconMode="none"
                app:endIconTint="@color/drawable_tint"
                app:errorEnabled="true"
                app:helperTextTextColor="@color/helper_color"
                app:startIconTint="@color/drawable_tint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="name"
                    android:fontFamily="@font/raleway"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailETLayout"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="4dp"
                android:hint="@string/email"
                android:minHeight="48dp"
                app:boxStrokeColor="@color/dark_blue_color"
                app:boxStrokeErrorColor="@color/error_color"
                app:endIconMode="none"
                app:endIconTint="@color/drawable_tint"
                app:errorEnabled="true"
                app:helperText="You cannot edit this field."
                app:helperTextTextColor="@color/helper_color"
                app:startIconTint="@color/drawable_tint">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailET"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:autofillHints="emailAddress"
                    android:enabled="false"
                    android:fontFamily="@font/raleway"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/resetPasswordBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:background="@drawable/btn_solid"
                android:backgroundTint="@color/dark_blue_color"
                android:backgroundTintMode="multiply"
                android:fontFamily="@font/raleway"
                android:hapticFeedbackEnabled="true"
                android:minHeight="50dp"
                android:text="@string/reset_your_password"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/deleteAccountBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:background="@drawable/btn_outline"
                android:backgroundTint="@color/grey"
                android:backgroundTintMode="multiply"
                android:fontFamily="@font/raleway"
                android:hapticFeedbackEnabled="true"
                android:minHeight="50dp"
                android:text="@string/delete_your_account"
                android:textAllCaps="false"
                android:textColor="@color/red"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>

     <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/saveFAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:src="@drawable/ic_save"
        app:backgroundTint="@color/light_blue_color"
        app:fabCustomSize="56dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:maxImageSize="32dp"
        app:tint="@android:color/white"
        tools:ignore="ContentDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>